// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList: Component should render correctly 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Project users list"
        id="project.userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.userList.headerTitle"
        values={Object {}}
      />
    }
  />
  <UserList
    onRemoveUser={[Function]}
    projectId="1"
    users={Array []}
  />
  <NavigationContainer
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.userList.back"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.userList.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.userList.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.userList.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</Fragment>
`;

exports[`UserList: Component should render correctly with users 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Project users list"
        id="project.userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.userList.headerTitle"
        values={Object {}}
      />
    }
  />
  <UserList
    onRemoveUser={[Function]}
    projectId="1"
    users={
      Array [
        Object {
          "firstName": "Alan",
          "id": "1",
          "lastName": "Watts",
        },
        Object {
          "firstName": "Dale",
          "id": "2",
          "lastName": "Chihuly",
        },
        Object {
          "firstName": "Dave",
          "id": "3",
          "lastName": "Bowie",
        },
      ]
    }
  />
  <NavigationContainer
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.userList.back"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="Confirm Removal"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.9)",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "color": "FFFFFF",
          "display": "flex",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.userList.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.userList.cancelRemoval"
          values={Object {}}
        />
      </Styled(Component)>
      <Styled(Component)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.userList.confirmRemoval"
          values={Object {}}
        />
      </Styled(Component)>
    </styled.div>
  </Modal>
</Fragment>
`;
